# harvcode

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  TESTING.md
.github/workflows/: ci.yml  release.yml
src/: args.rs  clipboard.rs  filter.rs  formatter.rs  list.rs  main.rs  picker.rs  report.rs  walker.rs
tests/: cli.rs
